--- a/style.css
+++ b/style.css
@@ -13,18 +13,22 @@
 }
 body{
 	text-align: center;
-	/* margin:auto; */
 	align-content: center;
 	color: aqua;
 	background-color: rgb(0, 0, 0);
 }
 #temp_value {
-	width: 250px;
-	height: 25px;
+	width: 200px;
+	height: 20px;
 	font-size: 20px;
 	padding: 10px;
 	border-radius: 5px;
 	border: 1px solid rgba(0, 255, 255, 0.737); 
+}
+#temp_unit{
+	width: 150px;
+	height: 30px;
+	border-radius: 10%;
 }
 #btn{
 	width: 210px;
