--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ body{
 	height: 20px;
 	font-size: 20px;
 	padding: 10px;
-	border-radius: 5px;
-	border: 1px solid rgba(0, 255, 255, 0.737); 
+	border-radius: 6px;
+	border: 4px solid rgba(46, 188, 188, 0.737); 
+}
+#temp_value:focus{
+	background-color: rgb(189, 179, 179);
 }
 #temp_unit{
 	width: 150px;
@@ -34,5 +37,9 @@ body{
 	width: 210px;
 	height: 20px;
 	border-radius: 50%;
-	cursor:pointer;
+	cursor: pointer;
+}
+#btn:hover {
+	color: white;
+	background-color: rgb(72, 173, 228);
 }
